[ENG-16218] Fix spacing between footer and content in fence gallery (#1688)

--- a/src/components/PhotoGallery/index.scss
+++ b/src/components/PhotoGallery/index.scss
@@ -7,6 +7,8 @@
   }
 }
 .photo-gallery {
+  padding-bottom: $v-64;
+
   &__categories {
     @include phone() {
       padding-bottom: $v-12;
